modules/vpc/main.tf
resource "aws_vpc" "this" {

  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "svs-vpc"
  }
}

resource "aws_subnet" "public" {

  vpc_id = aws_vpc.this.id

  cidr_block = "10.0.1.0/24"

  map_public_ip_on_launch = true

  availability_zone = "ap-southeast-1a"

  tags = {
    Name = "svs-public-subnet"
  }
}

resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id
}

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.this.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.this.id
  }
}

resource "aws_route_table_association" "public" {

  subnet_id = aws_subnet.public.id

  route_table_id = aws_route_table.public.id
}
